--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
   pre_build:
     commands:
       - echo "Installing dependencies..."
-      - pip install -r successful-aws/requirement.txt
+      - pip install -r requirement.txt
   build:
     commands:
       - echo "Running tests..."
