--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,8 +18,8 @@ env:
       - echo "Running tests..."
       - echo "Building Docker image..."
       - docker login -u $DOCK_REG_USERNAME -p $DOCK_REG_PASSWORD docker.io
-      - docker build -t "$DOCK_REG_USERNAME/success-aws:latest" .
-      - docker push "$DOCK_REG_USERNAME/success-aws:latest"
+      - docker build -t "$DOCK_REG_USERNAME/shivpriya/aws-cicd-success" .
+      - docker push "$DOCK_REG_USERNAME/shivpriya/aws-cicd-success"
   post_build:
     commands:
       - echo "Build completed successfully!"
