--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,7 @@ env:
       - echo "Running tests..."
       - echo "Building Docker image..."
       - echo "$DOCK_REG_PASSWORD" | docker login -u "$DOCK_REG_USERNAME" --password-stdin "$DOCKER_REG_URL"
-      - docker build -t "$DOCKER_REG_URL/$DOCK_REG_USERNAME/adi-janu:latest"
+      - docker build -t "$DOCKER_REG_URL/$DOCK_REG_USERNAME/adi-janu:latest" .
       - docker push "$DOCKER_REG_URL/$DOCK_REG_USERNAME/adi-janu:latest"
   post_build:
     commands:
