--- a/appspec.yml
+++ b/appspec.yml
@@ -3,10 +3,10 @@ os: linux
 
 hooks:
   ApplicationStop:
-    - location: scripts/stop_container.sh
+    - location: scripts/stop.sh
       timeout: 300
       runas: root
   AfterInstall:
-    - location: scripts/start_container.sh
+    - location: scripts/start.sh
       timeout: 300
       runas: root
